# cdl-ai-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logging_config.py  secrets.py
app/middleware/: request_id.py  request_logging.py
app/models/: base.py  education_models.py  requests.py
app/services/: message_service.py  rabbitmq.py
deployment/: add_policy_to_existing_role.sh  docker-compose.prod.yml  docker-compose.single.yml  setup_ec2_instance.sh  setup_ecs_task.sh
docs/: AWS_CREDENTIALS_GUIDE.md
nginx/: nginx.conf
scripts/: export-secrets.py  setup-iam-role.md  start.sh  test-secrets.py
tests/: test_integration.py
troubleshooting/: 2025-08-18-gunicorn-startup-failure.md
